# secure-terraform-provenance

./: .gitignore  Jenkinsfile  cosign.pub  main.tf  main.tf.attestation.sigstore.json  policy.ci.yml  policy.yml  provenance.json  pyproject.toml  secure-apply.py
securetf/: cli.py  policy.py  provenance.py  runner.py
